Persist custom fields in flight save endpoint
